Bottom half of the default cube and other meshes are transparent with eevee #58266

Closed
opened 2018-11-30 04:03:18 +01:00 by Nico Tex · 12 comments

System Information
Operating system: Windows 10 64 bits
Graphics card: Intel UHD Graphics 620

Blender Version
Broken: 2.80, 4c31bed6b4, blender2.8, 2018-11-30

Short description of error
When rendering the default cube on a new project, the bottom half is transparent.
Moving the cube or the camera don't solve the problem.
Blender Render 29_11_2018 9_58_32 PM.png
Blender Render 29_11_2018 9_59_42 PM.png
Same result with other meshes.
Blender Render 29_11_2018 10_12_08 PM.png
Exact steps for others to reproduce the error
Render the first default scene.

**System Information** Operating system: Windows 10 64 bits Graphics card: Intel UHD Graphics 620 **Blender Version** Broken: 2.80, 4c31bed6b46, blender2.8, 2018-11-30 **Short description of error** When rendering the default cube on a new project, the bottom half is transparent. Moving the cube or the camera don't solve the problem. ![Blender Render 29_11_2018 9_58_32 PM.png](https://archive.blender.org/developer/F5762602/Blender_Render_29_11_2018_9_58_32_PM.png) ![Blender Render 29_11_2018 9_59_42 PM.png](https://archive.blender.org/developer/F5762610/Blender_Render_29_11_2018_9_59_42_PM.png) Same result with other meshes. ![Blender Render 29_11_2018 10_12_08 PM.png](https://archive.blender.org/developer/F5762694/Blender_Render_29_11_2018_10_12_08_PM.png) **Exact steps for others to reproduce the error** Render the first default scene.
Author

Added subscriber: @IRIDIUM

Added subscriber: @IRIDIUM

#59171 was marked as duplicate of this issue

#59171 was marked as duplicate of this issue
Nico Tex changed title from Bottom half of the default cube is transparent on eevee to Bottom half of the default cube and other meshes are transparent with eevee 2018-11-30 04:15:52 +01:00
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-30 15:13:17 +01:00
Member

Cannot confirm (linux 970m), might be tied to Intel 620...

@IRIDIUM : are drivers up to date?

@fclem: does this ring a bell?

Cannot confirm (linux 970m), might be tied to Intel 620... @IRIDIUM : are drivers up to date? @fclem: does this ring a bell?
Author

I have the latest recommended driver from Dell.
Intel(R) UHD Graphics 620 Friday, November 30, 2018.txt

I have the latest recommended driver from Dell. [Intel(R) UHD Graphics 620 Friday, November 30, 2018.txt](https://archive.blender.org/developer/F5770166/Intel_R__UHD_Graphics_620_Friday__November_30__2018.txt)

I remember having fixed this problem... I think it was 117bc96ce8 but if this is back, that means your GPU passes through the
detection somehow.

I've added a new "--debug-gpu-force-workarounds" to test gpu workarounds bypassing the detection. It should be in the next build (in 45minutes from the time of this comment).

If running from command line with the --debug-gpu-force-workarounds option does not work then it's a bit hard to guess what's wrong. Maybe a glFlush() or glFinish() missing somewhere.

I remember having fixed this problem... I think it was 117bc96ce8 but if this is back, that means your GPU passes through the detection somehow. I've added a new "--debug-gpu-force-workarounds" to test gpu workarounds bypassing the detection. It should be in the next build (in 45minutes from the time of this comment). If running from command line with the --debug-gpu-force-workarounds option does not work then it's a bit hard to guess what's wrong. Maybe a glFlush() or glFinish() missing somewhere.
Author

It work perfectly. No more issue on viewport and on render with "--debug-gpu-force-workarounds".

It work perfectly. No more issue on viewport and on render with "--debug-gpu-force-workarounds".

Could you please paste your system-info.txt so I can list your gpu for the workaround.

Could you please paste your system-info.txt so I can list your gpu for the workaround.
Author
[system-info.txt](https://archive.blender.org/developer/F5917231/system-info.txt)

This issue was referenced by 2a6bc4a82c

This issue was referenced by 2a6bc4a82cb3201ac623512e3f9f53f3890ecae2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @hellhand

Added subscriber: @hellhand
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58266
No description provided.