Fix T58266 : Bottom half of meshes are transparent with eevee render