source/blender/draw/engines/eevee/eevee_effects.c
@@ -460,10 +460,10 @@ void EEVEE_create_minmax_buffer(EEVEE_Data *vedata, GPUTexture *depth_src, int l
 	/* Restore */
 	GPU_framebuffer_bind(fbl->main_fb);
 
-	if (GPU_mip_render_workaround()) {
-		/* Fix dot corruption on intel HD5XX/HD6XX series.
-		 * It seems affected drivers are the same that needs
-		 * GPU_mip_render_workaround. */
+	if (GPU_mip_render_workaround() ||
+	    GPU_type_matches(GPU_DEVICE_INTEL_UHD, GPU_OS_WIN, GPU_DRIVER_ANY))
+	{
+		/* Fix dot corruption on intel HD5XX/HD6XX series. */
 		GPU_flush();
 	}
 }
