source/blender/draw/engines/eevee/eevee_occlusion.c
@@ -253,10 +253,10 @@ void EEVEE_occlusion_compute(
 			DRW_draw_pass(psl->ao_horizon_search);
 		}
 
-		if (GPU_mip_render_workaround()) {
-			/* Fix dot corruption on intel HD5XX/HD6XX series.
-			 * It seems affected drivers are the same that needs
-			 * GPU_mip_render_workaround. */
+		if (GPU_mip_render_workaround() ||
+		    GPU_type_matches(GPU_DEVICE_INTEL_UHD, GPU_OS_WIN, GPU_DRIVER_ANY))
+		{
+			/* Fix dot corruption on intel HD5XX/HD6XX series. */
 			GPU_flush();
 		}
 
